<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:layout_margin="16dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text= "@string/igrac_naziv_label"/>

    <EditText
        android:id="@+id/igrac_naziv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/igrac_naziv_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Slika igraca: "
                    android:textSize="15sp"
                    android:textColor="@android:color/black"
                    />
                <Button
                    android:id="@+id/izaberi_sliku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/crvena_boja"
                    android:textColor="@android:color/white"
                    android:text="Izaberi sliku"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                  >

                    <ImageView
                        android:id="@+id/izabrana_slika"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text="@string/igrac_detalji_label"/>

    <CheckBox
        android:id="@+id/igrac_prvi_tim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:buttonTint="@android:color/holo_red_dark"
        android:text="@string/igrac_solved_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:text="@string/igrac_mjesto_rodjenja_label"
        />
    <EditText
        android:id="@+id/igrac_mjestoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Unesite mjesto rodjenja"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/holo_red_dark"
        />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/igrac_datum_rodjenja_label"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        />
    <Button
        android:id="@+id/datum_rodjenja_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/crvena_boja"
        android:textColor="@android:color/white"
        />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/igrac_ulazak_u_klub_label"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        />

     <Button
         android:id="@+id/datum_ulaska_u_klub_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/crvena_boja"
         android:textColor="@android:color/white"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pozicija_igrac"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        />
    <EditText
        android:id="@+id/igrac_pozicija"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pozicija igraca"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/holo_red_dark"
        />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dosao iz kluba: "
                android:textSize="15sp"
                android:textColor="@android:color/black"
                />
            <EditText
                android:id="@+id/igrac_prethodni_klub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prethodni klub"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/holo_red_dark"
                />
            </LinearLayout>
    </ScrollView>

</LinearLayout>